--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="#">
                     <img
                         class="logo"
-                        src="/assets/logo-dark.svg"
+                        src="assets/logo-dark.svg"
                         alt="skilled"
                     />
                 </a>
@@ -129,7 +129,7 @@
                 <a href="#">
                     <img
                         class="logo"
-                        src="/assets/logo-light.svg"
+                        src="assets/logo-light.svg"
                         alt="skilled"
                     />
                 </a>
